v2.1h:
- Improved FPS stability.

v2.1g:
- Fixed incorrectly repeated input at round start and after training mode reset.
- Fixed occasional connect timeout caused by relay server being down.
- Prevent changing delay (via Ctrl + Number) if the game is not focused.

v2.1f:
- Fixed getting stuck on fetching IP address.
- Fixed startup issue when launching from the browser.

v2.1e:
- Fixed input drop issue from v2.1d.
- Fixed hidden stages having incorrect music.
- Fixed spectator names sometimes being swapped.
- Fixed some minor issues with spectating, should be more stable now.
- Added Versus CPU offline mode.
- Allow choosing 0 delay when netplaying.
- Reverted the training reset to what it was like in v2.0d.

v2.1d:
- In-game mapping automatically moves to next key.
- Fixed keyboard mapping not working in-game.
- Fixed diagonals not working for analog joysticks.
- Internal changes to controller handling, should hopefully fix the rare bug
  where buttons stop working for a bit. You'll need to reconfigure your controller.

v2.1c:
- Skip startup configuration window.
- Also more stable way to choose the game mode (versus/training).
  (Thanks to plumcot for the assembly code to do these two things)

v2.1b:
- Fixed startup issue on Windows XP.
- Faster disconnect when the game is closed by the other player.

v2.1a:
- Fixed spectate mode getting disconnected at the retry menu.
- Show full instructions at controller config.

v2.1:
- Can host and connect without port forward. It is still recommended to port forward if possible,
  since the initial connect will be faster, and it will probably be more stable and more likely to work.
  Note: this uses UDP hole-punching, which isn't guaranteed to work in all situations.
- In-game button config with player selection:
  Show or hide overlay with F4 on the keyboard or start button on any controller with start mapped.
  When the overlay is up, move controllers left or right to switch players.