@@ -1,5 +1,6 @@
 v2.1h:
 - Improved FPS stability.
+- Can set max allowed delay when hosting.
 
 v2.1g:
 - Fixed incorrectly repeated input at round start and after training mode reset.
